# AtlasDNS

./: .env.example  CHANGELOG.md  CLI_API_USAGE.md  Cargo.toml  Claude.md  DARK_MODE_FIX.md  DEPLOYMENT_SUMMARY.md  DNS_PARSER_TEST_COVERAGE.md  Dockerfile  Dockerfile.bak  FEATURE_ENHANCEMENT_REPORT.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  METRICS_IMPLEMENTATION.md  PROGRESS_REPORT.md  PWA_IMPLEMENTATION.md  README.md  ROADMAP.md  SECURITY_IMPLEMENTATION_SUMMARY.md  VISUALIZATION_IMPLEMENTATION.md  WEBSOCKET_IMPLEMENTATION_SUMMARY.md  WEBSOCKET_TASK_COMPLETION.md  WILDCARD_DNS_IMPLEMENTATION.md  ZONE_PARSER_IMPLEMENTATION.md  atlas_bug_fix.md  atlasdns.service  bugs.md  bugs_backup_atlas_20250903_005341.md  bugs_backup_atlas_20250903_074947.md  bugs_backup_atlas_20250904_164547.md  build_output.txt  cookies.txt  debug_cookies.txt  debug_headers.txt  docker-compose.yml  headers.txt  headers2.txt  overview.md  project_description.md  security.md  (+15 more)
.claude/commands/: atlas_bug_compress.md  atlas_bug_fix.md  atlas_bug_report.md  atlas_do_work.md  atlas_todo.md
benches/: dns_parser_bench.rs
config/: atlas-dns.yaml  security.toml  ssl-example.json
dashboards/: atlas-dns-metrics.json
docs/: DEPLOY.md  ROUTER_SETUP.md  SECURITY_AUDIT.md  ZONE_PARSER.md  grafana-dashboard.json  home-deployment.md
examples/: metrics_demo.rs  zone_import.rs
grafana/: dashboard.json
helm/atlas-dns/: Chart.yaml  README.md  values.yaml
helm/atlas-dns/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml
scripts/: setup.sh  update_blocklists.sh
sdk/go/: client.go  go.mod
sdk/python/: setup.py
src/: acme.rs  config.rs  geoip.rs  health.rs  lib.rs  mdns.rs  privilege_escalation.rs  storage.rs  threat_intel.rs
src/cluster/: mod.rs  sync.rs
src/dns/: acme.rs  adaptive_cache.rs  alert_management.rs  analytics.rs  anomaly.rs  api_keys.rs  authority.rs  authority_test.rs  bench.rs  blocklist_updater.rs  buffer.rs  cache.rs  cache_poisoning.rs  cache_test.rs  captive_portal.rs  client.rs  client_rules.rs  clustering.rs  cname_flattening.rs  connection_pool.rs  context.rs  context_ext.rs  ct_monitor.rs  ddos_protection.rs  device_tracker.rs  distributed_tracing.rs  dns_views.rs  dnssec.rs  dnssec_test.rs  doh.rs  doh_server.rs  doq.rs  doq_manager.rs  dot.rs  dot_manager.rs  dynamic_update.rs  edns0.rs  error_utils.rs  errors.rs  firewall.rs  (+47 more)
src/dns/security/: ddos_protection.rs  firewall.rs  manager.rs  mod.rs  rate_limiter.rs  tests.rs  (+1 more)
src/dnssec/: chain.rs  mod.rs  trust_anchor.rs  validator.rs
src/k8s/: mod.rs  operator.rs
src/logging/: mod.rs  query_log.rs
src/metrics/: aggregator.rs  collector.rs  geoip.rs  mod.rs  storage.rs  streaming.rs
src/threat_intel/: blocklist.rs  feeds.rs  mod.rs
src/web/: activity.rs  api_v2.rs  authority.rs  blocklists.rs  bulk_operations.rs  cache.rs  csrf.rs  devices.rs  graphql.rs  graphql_enhanced.rs  index.rs  mod.rs  panic_handler.rs  pihole_api.rs  rate_limiter.rs  rpz.rs  secure_password.rs  security_tests.rs  server.rs  sessions.rs  system_info.rs  threat_intel.rs  token_rotation.rs  users.rs  users_test.rs  util.rs  validation.rs  webhooks.rs  websocket.rs
terraform/: main.tf
tests/: dns_parser_integration.rs  dns_parser_proptest.rs  http_size_tracking_test.rs  integration_test.rs  mdns_wire_protocol.rs  metrics_integration.rs  rate_limiter_integration.rs  resolver_integration.rs  websocket_test.rs  zone_parser_test.rs
tests/fixtures/: dns_test_data.rs
tests/zone_files/: complex.zone  example.com.zone  include_main.zone  include_part.zone  minimal.zone
web-ui/: .env.example  .gitignore  COMMAND_PALETTE_DEMO.md  README-i18n.md  README.md  package-lock.json  package.json  tsconfig.json
web-ui/docs/: i18n-translation-workflow.md
web-ui/public/: enhanced-service-worker.js  index.html  manifest.json  robots.txt  service-worker.js
web-ui/src/: App.tsx  index.css  index.tsx  serviceWorkerRegistration.ts  test-i18n.js  theme.ts
(+236 files in other folders)
