[package]
name = "atlas"
version = "0.0.1"
authors = ["emil", "p0indexter", "PixelCoda"]
edition = "2018"

[dependencies]
ascii = "1.0.0"
chrono = { version = "0.4.13", features = ["serde"] }
derive_more = "0.99.9"
getopts = "0.2.21"
handlebars = "3.3.0"
parking_lot = "0.12"
rand = "0.7.3"
regex = "1.3.9"
serde = { version = "1.0.114", features = ["derive"] }
serde_derive = "1.0.114"
serde_json = "1.0.57"
tiny_http = { version = "0.11.0", features = ["ssl"] }
log = "0.4.14"
simple_logger = { git = "https://github.com/PixelCoda/rust-simple_logger.git", version = "1.13.6" }
# acme2 = "0.5"  # Temporarily disabled - needs API adjustments
openssl = "0.10"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.13"
uuid = { version = "1.4", features = ["v4", "serde"] }
sha2 = "0.10"
sudo = "0.6"
sysinfo = "0.29"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading"] }
