[package]
name = "atlas"
version = "0.0.1"
authors = ["emil", "p0indexter", "PixelCoda"]
edition = "2018"

[dependencies]
ascii = "1.0.0"
chrono = { version = "0.4.13", features = ["serde"] }
derive_more = "0.99.9"
getopts = "0.2.21"
handlebars = "3.3.0"
parking_lot = "0.12"
rand = "0.7.3"
regex = "1.3.9"
serde = { version = "1.0.114", features = ["derive"] }
serde_derive = "1.0.114"
serde_json = "1.0.57"
tiny_http = { version = "0.11.0", features = ["ssl"] }
log = "0.4.14"
simple_logger = { git = "https://github.com/PixelCoda/rust-simple_logger.git", version = "1.13.6" }
# acme2 = "0.5"  # Temporarily disabled - needs API adjustments
openssl = "0.10"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.13"
uuid = { version = "1.4", features = ["v4", "serde"] }
sha2 = "0.10"
bcrypt = "0.15"
sudo = "0.6"
sentry = "0.34"
sysinfo = "0.29"
prometheus = "0.13"
lazy_static = "1.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"
tracing-opentelemetry = "0.18"
async-graphql = { version = "5.0", features = ["chrono"] }
async-graphql-poem = "5.0"
poem = { version = "1.3", features = ["websocket"] }
async-stream = "0.3"
futures-util = "0.3"
libc = "0.2"

# DNS-over-QUIC dependencies
quinn = "0.10"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rcgen = "0.11"

# CLI dependencies
clap = { version = "4.3", features = ["derive", "env", "cargo"] }
colored = "2.0"
comfy-table = "7.0"
indicatif = "0.17"
serde_yaml = "0.9"
ipnetwork = "0.20"
hmac = "0.12"
hex = "0.4"
flate2 = "1.0"

# Real-time metrics dependencies
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite"] }
maxminddb = "0.23"
axum = { version = "0.6", features = ["ws"] }

# Kubernetes operator dependencies
kube = { version = "0.87", features = ["runtime", "derive", "client", "ws"] }
k8s-openapi = { version = "0.20", features = ["v1_28"] }
kube-derive = "0.87"
kube-runtime = "0.87"
futures = "0.3"
schemars = "0.8"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading"] }

[dev-dependencies]
proptest = "1.0"
criterion = "0.5"

[[bin]]
name = "atlas"
path = "src/bin/atlas.rs"

[[bin]]
name = "atlas-cli"
path = "src/bin/atlas-cli.rs"
